--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,5 +1,3 @@
-/* --- ABOUT PAGE --- */
-
 .about-container {
     padding: 40px 20px;
     text-align: center;
@@ -35,7 +33,6 @@
     box-shadow: 0 10px 30px rgba(0,0,0,0.15);
 }
 
-/* FOTO – metade dentro, metade fora */
 .team-img {
     width: 140px;
     height: 140px;
@@ -50,23 +47,24 @@
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
 }
 
-/* Foto Carolina */
 .carol-img {
     background-image: url("https://avatars.githubusercontent.com/u/179043499?v=4");
 }
 
-/* Foto Maria */
 .maria-img {
     background-image: url("https://avatars.githubusercontent.com/u/152435513?v=4");
 }
 
-/* Foto Luis Felipe */
-.lipe-img {
-    background-image: url("https://avatars.githubusercontent.com/u/142549399?v=4");
+.yasmin-img {
+    background-image: url("../assets/yasmin.svg");
+}
+
+.sara-img {
+    background-image: url("../assets/sara.svg");
 }
 
 .team-card h3 {
-    margin-top: 110px; /* por causa da foto */
+    margin-top: 110px;
     font-size: 1.4rem;
     color: #000;
 }
@@ -76,7 +74,6 @@
     color: #d00015;
 }
 
-/* Ícones Sociais */
 .social-icons {
     display: flex;
     justify-content: center;
@@ -96,7 +93,6 @@
     transform: scale(1.1);
 }
 
-/* --- Dark Mode --- */
 body.dark-mode .about-container h1 {
     color: #f1f1f1;
 }
